WIP: cfradial2 export

--- a/examples/notebooks/CfRadial1_Model_Transformation.ipynb
+++ b/examples/notebooks/CfRadial1_Model_Transformation.ipynb
@@ -21,6 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import xarray as xr\n",
     "import xradar as xd\n",
     "import datatree as xt\n",
@@ -295,11 +296,11 @@
    "id": "7f4f2c1c-5961-43f6-8c40-cbe796dd12dd",
    "metadata": {},
    "source": [
-    "Again we use a convenience function to extract the different sweep groups.  We can call this function with one kwarg:\n",
+    "Again we use a convenience function to extract the different sweep groups.  We can call this function with kwargs:\n",
     "\n",
     "- `optional=False` - only mandatory data and metadata is imported, defaults to `True`\n",
-    "- `first_dim=\"auto` - return first dimension either as `azimuth` (PPI) or `elevation` (RHI), defaults to `time`\n",
-    "- `site_coords=True` - add radar site coordinates to the Dataset, defaults to `False`\n",
+    "- `first_dim=\"time` - return first dimension as `time`, defaults to`auto` (return either as `azimuth` (PPI) or `elevation` (RHI)to `time`\n",
+    "- `site_coords=False` - do not add radar site coordinates to the Sweep-Dataset, defaults to `True`\n",
     "\n",
     "#### Examining first sweep with default kwargs."
    ]
@@ -341,7 +342,7 @@
    "id": "32652409",
    "metadata": {},
    "source": [
-    "#### `optional=False` and `site_coords=True`"
+    "#### `optional=False` and `site_coords=False`"
    ]
   },
   {
@@ -352,7 +353,7 @@
    "outputs": [],
    "source": [
     "sweeps = xd.io.backends.cfradial1._get_sweep_groups(\n",
-    "    ds, optional=False, site_coords=True\n",
+    "    ds, optional=False, site_coords=False\n",
     ")\n",
     "with xr.set_options(display_expand_data_vars=True):\n",
     "    display(sweeps[\"sweep_0\"])"
@@ -374,7 +375,7 @@
    "outputs": [],
    "source": [
     "sweeps = xd.io.backends.cfradial1._get_sweep_groups(\n",
-    "    ds, optional=False, site_coords=True, first_dim=\"auto\"\n",
+    "    ds, optional=False, site_coords=False, first_dim=\"time\"\n",
     ")\n",
     "with xr.set_options(display_expand_data_vars=True):\n",
     "    display(sweeps[\"sweep_0\"])"
@@ -450,6 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.unlink(\"test_dtree.nc\")\n",
     "dtree.to_netcdf(\"test_dtree.nc\")"
    ]
   },
@@ -494,7 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset(filename, group=\"sweep_1\", engine=\"cfradial1\", first_dim=\"auto\")\n",
+    "ds = xr.open_dataset(filename, group=\"sweep_1\", engine=\"cfradial1\", first_dim=\"time\")\n",
     "with xr.set_options(display_expand_data_vars=True):\n",
     "    display(ds.load())"
    ]
@@ -521,9 +523,81 @@
     "\n",
     "As the implementation with the cfradial1 xarray backend on one hand and the DataTree on the other hand is very versatile users can pick the most usable approach for their workflows.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42b00295-08c6-4b03-b293-69fb141239f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtree = xd.io.open_cfradial1_datatree(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de63c0fc-7d9f-443d-b802-e1c903930142",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xd.io.to_cfradial2(dtree, \"test_cfradial2.nc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8753ef39-f4eb-48c8-b084-e3e50aee337a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(dtree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa2c9b84-ce4a-46fb-bd2d-54bcc683f4e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for swp in dtree.groups:\n",
+    "    if \"sweep\" not in swp:\n",
+    "        continue\n",
+    "    print(swp, type(swp))\n",
+    "    # print(dtree[swp])\n",
+    "    dtree[swp] = xt.DataTree(\n",
+    "        xd.model.conform_cfradial2_sweep_group(\n",
+    "            dtree[swp].to_dataset(), optional=False, dim0=\"azimuth\"\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5e50281-6f8b-4400-b4c9-fb17d07eac24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtree[\"/\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "679d0844-6852-43c4-a2ee-78ccd7d8e943",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
